# CHEK

./: LICENSE  README.md
backend/: CHANGELOG.md  CONTRIBUTING.md  Dockerfile.dev  Dockerfile.prod  LICENSE  README.md  ai.md  alembic.ini  config.py  docker-compose.yml  init_db.py  main.py  pyproject.toml
backend/ai_tools/chek_database/: benchmark.json  benchmark_v1.txt  maturity.txt  maturity_information.txt  maturity_process.txt  maturity_technology.txt
backend/ai_tools/intellichek/: evaluate_level_of_maturity.py  evaluation_information.py  evaluation_organisation.py  evaluation_technology.py  introduction_message.py  report.py  roadmap.py
backend/alembic/: env.py
backend/alembic/versions/: 30f19fba881b_description_of_migrn.py
backend/api/authentication/: oauth.py
backend/api/routers/: authentification.py  email.py  maturity_models.py  prices.py  projects.py  questionaire.py  users.py
backend/api/schemas/: schemas.py
backend/api/templates/: confirmation_email.html  password_reset_email.html
backend/api/utils/: helpers.py
backend_/: .gitignore  database.py  main_dev.py
backend_/ai_tools/chek_database/: glossary.txt
backend_/ai_tools/intellichek/: basis.py  evaluation_glossary.py  evaluation_process.py  extraction.py  helpers.py
backend_/api/models/: models.py
frontend/: .gitignore  README.md  docker-compose.yml  nginx.conf  package-lock.json  vite.config.js
frontend/public/: AS_IS_Map4GPT.bpmn  AS_IS_Map4GPT_completed.bpmn
frontend/src/: App.vue
frontend_/: Dockerfile  index.html  package.json
frontend_/src/: main.js
(+46 files in other folders)
